fix(styles): adjust margin-top for main container in various components for better layout on smaller screens

--- a/frontend/ibudget/src/app/dashboard/dashboard.scss
+++ b/frontend/ibudget/src/app/dashboard/dashboard.scss
@@ -334,6 +334,7 @@ main {
     display: block;
     margin-left: 0;
     padding: 30px;
+    margin-top: 60px;
   }
 
   .card.greeting-panel,
