--- a/frontend/ibudget/src/app/savings/savings.scss
+++ b/frontend/ibudget/src/app/savings/savings.scss
@@ -396,6 +396,7 @@ main {
 @media (max-width: 320px) {
   main {
     margin-left: 0;
+    margin-top: 60px;
   }
 
   .inner-wrapper {
@@ -461,6 +462,7 @@ main {
 @media (min-width: 321px) and (max-width: 768px) {
   main {
     margin-left: 0;
+    margin-top: 60px;
   }
 
   .inner-wrapper {
